syntax = "proto3";

package darta.v1;

option go_package = "git.ninjainfosys.com/ePalika/proto/gen/darta/v1;dartav1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "proto/darta/v1/common.proto";

// ============================================================================
// ENUMS - Chalani Specific
// ============================================================================

enum ChalaniStatus {
  CHALANI_STATUS_UNSPECIFIED = 0;
  CHALANI_STATUS_DRAFT = 1;
  CHALANI_STATUS_PENDING_REVIEW = 2;
  CHALANI_STATUS_PENDING_APPROVAL = 3;
  CHALANI_STATUS_APPROVED = 4;
  CHALANI_STATUS_NUMBER_RESERVED = 5;
  CHALANI_STATUS_REGISTERED = 6;
  CHALANI_STATUS_SIGNED = 7;
  CHALANI_STATUS_SEALED = 8;
  CHALANI_STATUS_DISPATCHED = 9;
  CHALANI_STATUS_IN_TRANSIT = 10;
  CHALANI_STATUS_ACKNOWLEDGED = 11;
  CHALANI_STATUS_RETURNED_UNDELIVERED = 12;
  CHALANI_STATUS_DELIVERED = 13;
  CHALANI_STATUS_VOIDED = 14;
  CHALANI_STATUS_SUPERSEDED = 15;
  CHALANI_STATUS_CLOSED = 16;
}

enum RecipientType {
  RECIPIENT_TYPE_UNSPECIFIED = 0;
  RECIPIENT_TYPE_CITIZEN = 1;
  RECIPIENT_TYPE_ORGANIZATION = 2;
  RECIPIENT_TYPE_GOVERNMENT_OFFICE = 3;
  RECIPIENT_TYPE_OTHER = 4;
}

enum ApprovalDecision {
  APPROVAL_DECISION_UNSPECIFIED = 0;
  APPROVAL_DECISION_APPROVED = 1;
  APPROVAL_DECISION_REJECTED = 2;
  APPROVAL_DECISION_DELEGATED = 3;
}

// ============================================================================
// MESSAGES - Chalani Types
// ============================================================================

// Chalani represents an outgoing correspondence record
message Chalani {
  string id = 1;
  int32 chalani_number = 2;
  string formatted_chalani_number = 3;
  FiscalYear fiscal_year = 4;
  Scope scope = 5;
  Ward ward = 6;
  string subject = 7;
  string body = 8;
  string template_id = 9;
  repeated Attachment attachments = 10;
  string linked_darta_id = 11; // Reference to linked darta
  ChalaniStatus status = 12;
  repeated Signatory required_signatories = 13;
  repeated Approval approvals = 14;
  bool is_fully_approved = 15;
  DispatchChannel dispatch_channel = 16;
  Recipient recipient = 17;
  google.protobuf.Timestamp dispatched_at = 18;
  User dispatched_by = 19;
  string tracking_id = 20;
  string courier_name = 21;
  bool is_acknowledged = 22;
  google.protobuf.Timestamp acknowledged_at = 23;
  string acknowledged_by = 24;
  Attachment acknowledgement_proof = 25;
  google.protobuf.Timestamp delivered_at = 26;
  Attachment delivered_proof = 27;
  User created_by = 28;
  google.protobuf.Timestamp created_at = 29;
  google.protobuf.Timestamp updated_at = 30;
  repeated AuditEntry audit_trail = 31;
  string superseded_by_id = 32;
  string supersedes_id = 33;
  string tenant_id = 34;
}

// Signatory represents a required signatory for approval
message Signatory {
  string id = 1;
  User user = 2;
  Role role = 3;
  int32 order = 4;
  bool is_required = 5;
}

// Approval represents an approval decision
message Approval {
  string id = 1;
  Signatory signatory = 2;
  ApprovalDecision decision = 3;
  string notes = 4;
  google.protobuf.Timestamp approved_at = 5;
}

// Recipient represents the recipient of a chalani
message Recipient {
  string id = 1;
  RecipientType type = 2;
  string name = 3;
  string organization = 4;
  string email = 5;
  string phone = 6;
  string address = 7;
}

// ChalaniConnection for cursor-based pagination
message ChalaniConnection {
  repeated ChalaniEdge edges = 1;
  PageInfo page_info = 2;
}

message ChalaniEdge {
  string cursor = 1;
  Chalani node = 2;
}

// ChalaniStats for analytics
message ChalaniStats {
  int32 total = 1;
  repeated ChalaniStatusCount by_status = 2;
  repeated DispatchChannelCount by_channel = 3;
  double acknowledgement_rate = 4;
  double avg_dispatch_time_hours = 5;
}

message ChalaniStatusCount {
  ChalaniStatus status = 1;
  int32 count = 2;
}

message DispatchChannelCount {
  DispatchChannel channel = 1;
  int32 count = 2;
}

// SupersedeChalaniResult for supersede operation
message SupersedeChalaniResult {
  Chalani old = 1;
  Chalani new = 2;
}

// ChalaniTemplate for reusable templates
message ChalaniTemplate {
  string id = 1;
  string name = 2;
  string category = 3;
  string subject = 4;
  string body = 5;
  repeated string required_signatory_role_ids = 6;
  bool is_active = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// ============================================================================
// INPUT MESSAGES
// ============================================================================

// ChalaniFilterInput for filtering chalani list
message ChalaniFilterInput {
  string fiscal_year_id = 1;
  Scope scope = 2;
  string ward_id = 3;
  ChalaniStatus status = 4;
  DispatchChannel dispatch_channel = 5;
  string recipient_name = 6;
  google.protobuf.Timestamp from_date = 7;
  google.protobuf.Timestamp to_date = 8;
  string search = 9; // Search in subject, body, recipient, etc.
  string linked_darta_id = 10;
  string tenant_id = 11;
}

// RecipientInput for creating/updating recipient
message RecipientInput {
  RecipientType type = 1;
  string name = 2;
  string organization = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
}

// SignatoryInput for defining required signatories
message SignatoryInput {
  string user_id = 1;
  string role_id = 2;
  int32 order = 3;
  bool is_required = 4;
}

// CreateChalaniInput for creating a new chalani
message CreateChalaniInput {
  Scope scope = 1;
  string ward_id = 2;
  string subject = 3;
  string body = 4;
  string template_id = 5;
  repeated string attachment_ids = 6;
  string linked_darta_id = 7;
  RecipientInput recipient = 8;
  repeated SignatoryInput signatories = 9;
  string idempotency_key = 10;
  string tenant_id = 11;
}

// ReviewChalaniInput for reviewing chalani
message ReviewChalaniInput {
  string chalani_id = 1;
  string notes = 2;
  bool approved = 3;
}

// ApproveChalaniInput for approving chalani
message ApproveChalaniInput {
  string chalani_id = 1;
  ApprovalDecision decision = 2;
  string notes = 3;
  string delegated_to_user_id = 4; // If delegating
}

// ReserveChalaniNumberInput
message ReserveChalaniNumberInput {
  string chalani_id = 1;
  string allocation_id = 2;
}

// FinalizeChalaniRegistrationInput
message FinalizeChalaniRegistrationInput {
  string chalani_id = 1;
  string allocation_id = 2;
}

// DirectRegisterChalaniInput
message DirectRegisterChalaniInput {
  string chalani_id = 1;
}

// SignChalaniInput for signing chalani
message SignChalaniInput {
  string chalani_id = 1;
  string signature_attachment_id = 2; // Digital signature image/PDF
}

// SealChalaniInput for sealing chalani
message SealChalaniInput {
  string chalani_id = 1;
  string seal_attachment_id = 2; // Seal image
}

// DispatchChalaniInput for dispatching chalani
message DispatchChalaniInput {
  string chalani_id = 1;
  DispatchChannel dispatch_channel = 2;
  string tracking_id = 3;
  string courier_name = 4;
  string notes = 5;
}

// MarkInTransitInput
message MarkInTransitInput {
  string chalani_id = 1;
  string location = 2;
  string notes = 3;
}

// AcknowledgeChalaniInput
message AcknowledgeChalaniInput {
  string chalani_id = 1;
  string acknowledged_by = 2;
  string acknowledgement_proof_id = 3;
}

// MarkDeliveredInput
message MarkDeliveredInput {
  string chalani_id = 1;
  string delivered_proof_id = 2;
  string notes = 3;
}

// MarkReturnedUndeliveredInput
message MarkReturnedUndeliveredInput {
  string chalani_id = 1;
  string reason = 2;
}

// ResendChalaniInput
message ResendChalaniInput {
  string chalani_id = 1;
  DispatchChannel new_dispatch_channel = 2;
  RecipientInput new_recipient = 3;
  string notes = 4;
}

// VoidChalaniInput
message VoidChalaniInput {
  string chalani_id = 1;
  string reason = 2;
}

// SupersedeChalaniInput
message SupersedeChalaniInput {
  string chalani_id = 1;
  string reason = 2;
  CreateChalaniInput new_chalani = 3;
}

// ============================================================================
// SERVICE DEFINITION
// ============================================================================

service ChalaniService {
  // Query operations
  rpc GetChalani(GetChalaniRequest) returns (GetChalaniResponse);
  rpc GetChalaniByNumber(GetChalaniByNumberRequest) returns (GetChalaniByNumberResponse);
  rpc ListChalanis(ListChalanisRequest) returns (ListChalanisResponse);
  rpc GetMyChalani(GetMyChalaniRequest) returns (GetMyChalaniResponse);
  rpc GetChalaniStats(GetChalaniStatsRequest) returns (GetChalaniStatsResponse);
  rpc ListChalaniTemplates(ListChalaniTemplatesRequest) returns (ListChalaniTemplatesResponse);
  rpc GetChalaniTemplate(GetChalaniTemplateRequest) returns (GetChalaniTemplateResponse);
  
  // Mutation operations - Creation and Review
  rpc CreateChalani(CreateChalaniRequest) returns (CreateChalaniResponse);
  rpc SubmitChalani(SubmitChalaniRequest) returns (SubmitChalaniResponse);
  rpc ReviewChalani(ReviewChalaniRequest) returns (ReviewChalaniResponse);
  rpc ApproveChalani(ApproveChalaniRequest) returns (ApproveChalaniResponse);
  
  // Mutation operations - Registration
  rpc ReserveChalaniNumber(ReserveChalaniNumberRequest) returns (ReserveChalaniNumberResponse);
  rpc FinalizeChalaniRegistration(FinalizeChalaniRegistrationRequest) returns (FinalizeChalaniRegistrationResponse);
  rpc DirectRegisterChalani(DirectRegisterChalaniRequest) returns (DirectRegisterChalaniResponse);
  
  // Mutation operations - Signing and Sealing
  rpc SignChalani(SignChalaniRequest) returns (SignChalaniResponse);
  rpc SealChalani(SealChalaniRequest) returns (SealChalaniResponse);
  
  // Mutation operations - Dispatch and Delivery
  rpc DispatchChalani(DispatchChalaniRequest) returns (DispatchChalaniResponse);
  rpc MarkChalaniInTransit(MarkChalaniInTransitRequest) returns (MarkChalaniInTransitResponse);
  rpc AcknowledgeChalani(AcknowledgeChalaniRequest) returns (AcknowledgeChalaniResponse);
  rpc MarkChalaniDelivered(MarkChalaniDeliveredRequest) returns (MarkChalaniDeliveredResponse);
  rpc MarkChalaniReturnedUndelivered(MarkChalaniReturnedUndeliveredRequest) returns (MarkChalaniReturnedUndeliveredResponse);
  
  // Mutation operations - Lifecycle management
  rpc ResendChalani(ResendChalaniRequest) returns (ResendChalaniResponse);
  rpc VoidChalani(VoidChalaniRequest) returns (VoidChalaniResponse);
  rpc SupersedeChalani(SupersedeChalaniRequest) returns (SupersedeChalaniResponse);
  rpc CloseChalani(CloseChalaniRequest) returns (CloseChalaniResponse);
  
  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// ============================================================================
// REQUEST/RESPONSE MESSAGES
// ============================================================================

// Query requests/responses
message GetChalaniRequest {
  string id = 1;
}

message GetChalaniResponse {
  Chalani chalani = 1;
}

message GetChalaniByNumberRequest {
  int32 chalani_number = 1;
  string fiscal_year_id = 2;
  Scope scope = 3;
  string ward_id = 4;
}

message GetChalaniByNumberResponse {
  Chalani chalani = 1;
}

message ListChalanisRequest {
  ChalaniFilterInput filter = 1;
  PaginationInput pagination = 2;
}

message ListChalanisResponse {
  ChalaniConnection connection = 1;
}

message GetMyChalaniRequest {
  ChalaniStatus status = 1;
  PaginationInput pagination = 2;
  string user_id = 3; // From context
}

message GetMyChalaniResponse {
  ChalaniConnection connection = 1;
}

message GetChalaniStatsRequest {
  Scope scope = 1;
  string fiscal_year_id = 2;
  string ward_id = 3;
  string tenant_id = 4;
}

message GetChalaniStatsResponse {
  ChalaniStats stats = 1;
}

message ListChalaniTemplatesRequest {
  string category = 1;
  bool active_only = 2;
  PaginationInput pagination = 3;
}

message ListChalaniTemplatesResponse {
  repeated ChalaniTemplate templates = 1;
  int64 total = 2;
}

message GetChalaniTemplateRequest {
  string id = 1;
}

message GetChalaniTemplateResponse {
  ChalaniTemplate template = 1;
}

// Mutation requests/responses
message CreateChalaniRequest {
  CreateChalaniInput input = 1;
}

message CreateChalaniResponse {
  Chalani chalani = 1;
}

message SubmitChalaniRequest {
  string chalani_id = 1;
}

message SubmitChalaniResponse {
  Chalani chalani = 1;
}

message ReviewChalaniRequest {
  ReviewChalaniInput input = 1;
}

message ReviewChalaniResponse {
  Chalani chalani = 1;
}

message ApproveChalaniRequest {
  ApproveChalaniInput input = 1;
}

message ApproveChalaniResponse {
  Chalani chalani = 1;
}

message ReserveChalaniNumberRequest {
  ReserveChalaniNumberInput input = 1;
}

message ReserveChalaniNumberResponse {
  Chalani chalani = 1;
}

message FinalizeChalaniRegistrationRequest {
  FinalizeChalaniRegistrationInput input = 1;
}

message FinalizeChalaniRegistrationResponse {
  Chalani chalani = 1;
}

message DirectRegisterChalaniRequest {
  DirectRegisterChalaniInput input = 1;
}

message DirectRegisterChalaniResponse {
  Chalani chalani = 1;
}

message SignChalaniRequest {
  SignChalaniInput input = 1;
}

message SignChalaniResponse {
  Chalani chalani = 1;
}

message SealChalaniRequest {
  SealChalaniInput input = 1;
}

message SealChalaniResponse {
  Chalani chalani = 1;
}

message DispatchChalaniRequest {
  DispatchChalaniInput input = 1;
}

message DispatchChalaniResponse {
  Chalani chalani = 1;
}

message MarkChalaniInTransitRequest {
  MarkInTransitInput input = 1;
}

message MarkChalaniInTransitResponse {
  Chalani chalani = 1;
}

message AcknowledgeChalaniRequest {
  AcknowledgeChalaniInput input = 1;
}

message AcknowledgeChalaniResponse {
  Chalani chalani = 1;
}

message MarkChalaniDeliveredRequest {
  MarkDeliveredInput input = 1;
}

message MarkChalaniDeliveredResponse {
  Chalani chalani = 1;
}

message MarkChalaniReturnedUndeliveredRequest {
  MarkReturnedUndeliveredInput input = 1;
}

message MarkChalaniReturnedUndeliveredResponse {
  Chalani chalani = 1;
}

message ResendChalaniRequest {
  ResendChalaniInput input = 1;
}

message ResendChalaniResponse {
  Chalani chalani = 1;
}

message VoidChalaniRequest {
  VoidChalaniInput input = 1;
}

message VoidChalaniResponse {
  Chalani chalani = 1;
}

message SupersedeChalaniRequest {
  SupersedeChalaniInput input = 1;
}

message SupersedeChalaniResponse {
  SupersedeChalaniResult result = 1;
}

message CloseChalaniRequest {
  string chalani_id = 1;
}

message CloseChalaniResponse {
  Chalani chalani = 1;
}
